--- a/agencies_manager_ui/src/app/agencies/agencies.component.html
+++ b/agencies_manager_ui/src/app/agencies/agencies.component.html
@@ -24,7 +24,7 @@
     <td>{{agency.settlementCurrency}}</td>
     <td>{{agency.contactPerson}}</td>
     <td>
-      <button class="btn btn-primary" (click)="onRemove(agency.name)">Edit</button>
+      <button class="btn btn-primary" (click)="openEdit(edit_agency_modal, agency)">Edit</button>
     </td><td>
       <button class="btn btn-primary" (click)="onRemove(agency.name)">Remove</button>
     </td>
@@ -36,12 +36,95 @@
 
 <ng-template #add_agency_modal let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">New agency details</h4>
+    <h4 class="modal-title" id="add-agency-modal-title">New agency details</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">×</span>
     </button>
   </div>
   <div class="modal-body">
     <create-agency-form (newItemEvent)="newAgencyAdded($event)" [modal]="modal"></create-agency-form>
+  </div>
+</ng-template>
+
+<ng-template #edit_agency_modal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="edit-agency-modal-title">Agency details</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form [formGroup]="editForm" >
+      <div class="form-group">
+        <label for="nameEdit">Name</label>
+        <input
+          required
+          formControlName="name"
+          id="nameEdit"
+          type="text"
+          class="form-control">
+      </div>
+
+      <div class="form-group">
+        <label for="countryEdit">Country</label>
+        <input
+          required
+          formControlName="country"
+          id="countryEdit"
+          type="text"
+          class="form-control"/>
+      </div>
+
+      <div class="form-group">
+        <label for="countryCodeEdit">City</label>
+        <input
+          required
+          formControlName="countryCode"
+          id="countryCodeEdit"
+          type="text"
+          class="form-control"/>
+      </div>
+
+      <div class="form-group">
+        <label for="cityEdit">City</label>
+        <input
+          required
+          formControlName="city"
+          id="cityEdit"
+          type="text"
+          class="form-control"/>
+      </div>
+
+      <div class="form-group">
+        <label for="streetEdit">Street</label>
+        <input
+          required
+          formControlName="street"
+          id="streetEdit"
+          type="text"
+          class="form-control"/>
+      </div>
+
+      <div class="form-group">
+        <label for="settlementCurrencyEdit">Settlement currency</label>
+        <input
+          required
+          formControlName="settlementCurrency"
+          id="settlementCurrencyEdit"
+          type="text"
+          class="form-control"/>
+      </div>
+
+      <div class="form-group">
+        <label for="contactPersonEdit">Contact person</label>
+        <input
+          required
+          formControlName="contactPerson"
+          id="contactPersonEdit"
+          type="text"
+          class="form-control"/>
+      </div>
+      <button class="btn btn-primary" (click)="modal.dismiss('Submitted')">Edit</button>
+    </form>
   </div>
 </ng-template>
