Rewrite fetch/save logic on ui

--- a/agencies_manager_ui/src/app/agencies/agencies.component.html
+++ b/agencies_manager_ui/src/app/agencies/agencies.component.html
@@ -27,7 +27,7 @@
       <button class="btn btn-primary" (click)="openEdit(edit_agency_modal, agency)">Edit</button>
     </td>
     <td>
-      <button class="btn btn-primary" (click)="onRemove(agency.name)">Remove</button>
+      <button class="btn btn-primary" (click)="onRemove(agency.uuid)">Remove</button>
     </td>
   </tr>
   </tbody>
